--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/ReactDev/pekan-pi-front/node_modules
+/ExpressDev/backendServer/node_modules
 /.pnp
 .pnp.js
 
