--- a/ExpressDev/backendServer/package.json
+++ b/ExpressDev/backendServer/package.json
@@ -1,7 +1,10 @@
 {
+  "type": "module",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "pg": "^8.8.0",
     "request": "^2.88.2"
   },
   "scripts": {
