--- a/ExpressDev/backendServer/package.json
+++ b/ExpressDev/backendServer/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
