--- a/ExpressDev/backendServer/package.json
+++ b/ExpressDev/backendServer/package.json
@@ -2,8 +2,10 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0"
   },
   "scripts": {
