--- a/ExpressDev/backendServer/.env
+++ b/ExpressDev/backendServer/.env
@@ -1,8 +1,8 @@
 APIkey = 6ddfa35cf4e54d66a386678906dc84d3
 PORT = 3002
 DBHOST = '127.0.0.1'
-USER = 'postgres'
-PASS = 'postgres'
+DBUSER = 'postgres'
+DBPASS = 'postgres'
 DBNAME = 'mydb'
 DBPORT = 5432
 SSECRET = 'P3k@nP11sth3w0rstpie'
