--- a/ExpressDev/backendServer/.env
+++ b/ExpressDev/backendServer/.env
@@ -1,7 +1,7 @@
 APIkey = d123acc25cd74b6a859c246e37ec77f6
 PORT = 3002
 DBHOST = '127.0.0.1'
-USER = 'postgres'
+UUSER = 'postgres'
 PASS = 'postgres'
 DBNAME = 'mydb'
 DBPORT = 5432
