--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APIkey = ec6b18b84aea41b8b12f6a6b6b4cfb67 #Adam's Spoonacular Key
-PORT = 3002
+#PORT = 3002
 DBHOST = '127.0.0.1'
 DBUSER = 'postgres'
 DBPASS = 'postgres'
