--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "type": "module",
+  "engines": {
+    "node": "16.15.0",
+    "npm": "8.5.5"
+  },
   "dependencies": {
     "axios": "^1.1.3",
     "cors": "^2.8.5",
@@ -9,6 +13,7 @@
     "pg": "^8.8.0"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "heroku-postbuild": "cd ReactDev/pekan-pi-front && npm install && npm run build"
   }
 }
