--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/ReactDev/pekan-pi-front/node_modules
-/ReactDev/pekan-pi-front/node_modules/.cache
-/ExpressDev/backendServer/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
@@ -15,7 +13,7 @@
 
 # misc
 .DS_Store
-/ExpressDev/backendServer/.env
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -24,4 +22,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-ExpressDev/backendServer/.env
+node_modules
