--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/ReactDev/pekan-pi-front/node_modules
-node_modules
+/node_modules
 /.pnp
 .pnp.js
 
@@ -10,7 +9,7 @@ node_modules
 /coverage
 
 # production
-/ReactDev/pekan-pi-front/build
+/build
 
 # misc
 .DS_Store
