--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   },
   "scripts": {
     "start": "node app.js",
-    "heroku-postbuild": "cd ReactDev/pekan-pi-front && npm install && npm run build"
+    "heroku-postbuild": "cd ReactDev/pekan-pi-front && npm install && npm start"
   }
 }
