--- a/ExpressDev/backendServer/.env
+++ b/ExpressDev/backendServer/.env
@@ -1,4 +1,4 @@
-APIkey = ec6b18b84aea41b8b12f6a6b6b4cfb67 #Adam's Spoonacular Key
+APIkey = 6ddfa35cf4e54d66a386678906dc84d3
 PORT = 3002
 DBHOST = '127.0.0.1'
 DBUSER = 'postgres'
